# trivialini

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  Trivialini.html  doc-index.html  index.html  trivialini.cabal  trivialini.haddock
.github/workflows/: haddock-pages.yml  test-apidocs.yml  test.yml
src/: Trivialini.hs
src/Trivialini/: Ini.hs  Parser.hs  SafeTypes.hs
test/: Main.hs  TestSafeTypes.hs
