name:                trivialini
version:             0.2.0.0
synopsis:            Ultra light weight ini file parser
homepage:            https://github.com/memowe/trivialini
license:             MIT
license-file:        LICENSE
author:              Mirko Westermeier
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:
    Trivialini,
    Trivialini.Ini,
    Trivialini.Parser
  build-depends:    base, containers
  hs-source-dirs:   src
  default-language: Haskell2010

Test-Suite test-trivialini
  type:             exitcode-stdio-1.0
  build-depends:    base, containers, trivialini
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
