cabal-version:       3.0
name:                trivialini
version:             0.4.0.0
synopsis:            Ultra light weight ini file parser
homepage:            https://github.com/memowe/trivialini
license:             MIT
license-file:        LICENSE
author:              Mirko Westermeier
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

common basic
  default-language: Haskell2010
  build-depends:    base >= 4.14.0.0
                  , containers
  ghc-options:      -Wall

library
  import: basic
  exposed-modules:
    Trivialini
  hs-source-dirs: src

Test-Suite test-trivialini
  import: basic
  type: exitcode-stdio-1.0
  build-depends:
    trivialini,
    hspec,
    temporary
  hs-source-dirs: test
  main-is: Main.hs
